workloads/demo-site.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-deployment
  namespace: demo
  labels:
    app: demo-site
  annotations:
    fluxcd.io/tag.demo-site: semver:~3
    fluxcd.io/automated: "true"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-site
  template:
    metadata:
      labels:
        app: demo-site
    spec:
      containers:
      - name: site
        image: stefanprodan/podinfo:4.0.6
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "20m"
            memory: "32Mi"
        ports:
        - containerPort: 9898

---
apiVersion: v1
kind: Service
metadata:
  name: site-service
  namespace: demo
  labels:
    app: demo-site
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9898
  selector:
    app: demo-site

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: site-route
  namespace: demo
  labels:
    app: demo-site
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`site.docwhat.net`)
      services:
        - name: site-service
          port: 80
