workloads/traefik.yaml
###############################################
# Traefik dashboard
###############################################
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.docwhat.net`)
      services:
        - kind: TraefikService
          name: api@internal
      middlewares:
        - name: auth
  tls: {}

###############################################
# BasicAuth Middleware
###############################################
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth
  namespace: kube-system
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
spec:
  basicAuth:
    secret: authusers # The name of a kubernetes generic secret.

###############################################
# Redirect from HTTP to HTTPS Middleware
###############################################
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: kube-system
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
spec:
  redirectScheme:
    scheme: https
    permanent: false

###############################################
# User/Password for http auth
###############################################
